<resources>
    <string name="app_name">JKHHAckathonProject</string>
    <string name="mainactivity_label">Мониторинг отключений</string>
    <string name="action_settings">Настройки</string>
    <string name="about_program">О программе</string>
    <string name="date">Дата:</string>
    <string name="relation">Район</string>
    <string name="text">Текст</string>
    <string name="title_activity_settings">Settings</string>

    <string name="address">Адрес</string>
    <string name="street_key">streetkey</string>
    <string name="house_key">housekey</string>

    <!-- Strings related to Settings -->

    <string name="notif_water">Вода</string>
    <string name="notif_power">Электричесвто</string>
    <string name="next">Далее</string>
    <string name="prev">Назад</string>
    <string name="upd_key">Назад</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_init_screen">InitScreen</string>
    <string-array name="streetType">
        <item>Ворошиловский район</item>
        <item>Железнодорожный район</item>
        <item>Кировский район</item>
        <item>Ленинский район</item>
        <item>Октябрьский район</item>
        <item>Первомайский район</item>
        <item>Пролетарский район</item>
        <item>Советский район</item>
    </string-array>
    <string-array name="streetValue">
        <item>Ворошиловский район</item>
        <item>Железнодорожный район</item>
        <item>Кировский район</item>
        <item>Ленинский район</item>
        <item>Октябрьский район</item>
        <item>Первомайский район</item>
        <item>Пролетарский район</item>
        <item>Советский район</item>
    </string-array>
    <string-array name="text_style">
        <item>6 часов</item>
        <item>12 часов</item>
        <item>1 день</item>
        <item>2 дня</item>
        <item>3 дня</item>
        <item>1 неделя</item>
    </string-array>

    <!-- Strings related to notifications. -->
    <string name="water_notification_title">Отключение воды в вашем районе</string>
    <string name="electro_notification_title">Отлючение электричества в вашем районе</string>
</resources>
