<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/address">

        <EditTextPreference
            android:key="@string/street_key"
            android:title="Улица"
            android:summary=""
            android:defaultValue=""
            android:dialogTitle="Введите название улицы" />
        <EditTextPreference
            android:key="@string/house_key"
            android:title="Номер дома"
            android:summary=""
            android:defaultValue=""
            android:dialogTitle="Введите ваш номер дома" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Уведомления">

        <CheckBoxPreference
            android:key="@string/notif_water"
            android:title="Вода"
            android:summary=""
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/notif_power"
            android:title="Электричесво"
            android:summary=""
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>